--- a/index.html
+++ b/index.html
@@ -52,21 +52,21 @@ body {font-family: "Lato", sans-serif}
 
     <!-- Automatic Slideshow Images -->
     <div class="mySlides w3-display-container w3-center">
-        <img class="concert" src="./music-show-concert-live.jpg" style="width:100%">
+        <img class="concert" src="./img/music-show-concert-live.jpg" style="width:100%">
         <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
         <h3>Los Angeles</h3>
         <p><b>We had the best time playing at Venice Beach!</b></p>   
         </div>
     </div>
     <div class="mySlides w3-display-container w3-center">
-        <img class="concert" src="./1679487156.jpg" style="width:100%">
+        <img class="concert" src="./img/1679487156.jpg" style="width:100%">
         <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
         <h3>New York</h3>
         <p><b>The atmosphere in New York is lorem ipsum.</b></p>    
         </div>
     </div>
     <div class="mySlides w3-display-container w3-center">
-        <img class="concert" src="./drums-set-people-man.jpg" style="width:100%">
+        <img class="concert" src="./img/drums-set-people-man.jpg" style="width:100%">
         <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
         <h3>Chicago</h3>
         <p><b>Thank you, Chicago - A night we won't forget.</b></p>    
